# airpods-battery-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Docs/: ARCHITECTURE.md  CONTRIBUTING.md  architecture-design.md
Source/: airpods_battery_cli_v5.cpp  minimal_test.cpp  modular_parser_test.cpp  simple_parser_test.cpp  test_protocol_parser.cpp
Source/ble/: BleDevice.cpp  BleDevice.hpp  IBleScanner.hpp  WinRtBleScanner.cpp  WinRtBleScanner.hpp
Source/protocol/: AirPodsData.cpp  AirPodsData.hpp  AppleContinuityParser.cpp  AppleContinuityParser.hpp  IProtocolParser.hpp
